Fix syntax error.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				console.log("we are connected!");
 				game.camera.useQuaternion = true;
 				game.camera.fov = 72;
-				player.avatar.useQuaternion = true;s
+				player.avatar.useQuaternion = true;
 			},
 			"onDisconnect" : function() {
 				console.log("good bye Oculus.");
